[compat, document] change encoding (euc-jp -> utf-8)

--- a/README.jp
+++ b/README.jp
@@ -1,13 +1,13 @@
-д│дьд╧ OpenRTM-aist д╬еъеъб╝е╣е╨б╝е╕ечеєд╟д╣бг
-OpenRTM-aist д╧е╟ехевеыещеде╗еєе╣д╬екб╝е╫еєе╜б╝е╣д╬RTе▀е╔еыежеиевд╟д╣бг
+уБУуВМуБп OpenRTM-aist уБоуГкуГкуГ╝уВ╣уГРуГ╝уВ╕уГзуГ│уБзуБЩуАВ
+OpenRTM-aist уБпуГЗуГеуВвуГлуГйуВдуВ╗уГ│уВ╣уБоуВкуГ╝уГЧуГ│уВ╜уГ╝уВ╣уБоRTуГЯуГЙуГлуВжуВиуВвуБзуБЩуАВ
 
-OpenRTM д╬└▀─ъбве╙еые╔бведеєе╣е╚б╝еыдкдшд╙ RTе│еєе▌б╝е═еєе╚д╬║ю└одЄ╣╘дж┴░д╦бв
-░╩▓╝д╬╩╕╜ёдЄдшдпдк╞╔д▀дпд└д╡ддбг
+OpenRTM уБошинхоЪуАБуГУуГлуГЙуАБуВдуГ│уВ╣уГИуГ╝уГлуБКуВИуБ│ RTуВ│уГ│уГЭуГ╝уГНуГ│уГИуБоф╜ЬцИРуВТшбМуБЖхЙНуБлуАБ
+ф╗еф╕ЛуБоцЦЗцЫ╕уВТуВИуБПуБКшкнуБ┐уБПуБауБХуБДуАВ
 
 files:
-README      - д│д╬е╒ебедеыд╬▒╤╕ь╚╟
-README.jp   - д│д╬е╒ебедеы
-COPYRIGHT   - ├°║ю╕в╔╜╝идкдшд╙ещеде╗еєе╣д╦д─ддд╞
-COPYING.LIB - LGPL (GNU╬Ї┼∙░ь╚╠╕°╜░═°═╤╡Ў┬·╖└╠є╜ё)
-INSTALL     - едеєе╣е╚б╝еы╝ъ╜ч(▒╤╕ь╚╟)
-INSTALL.jp  - едеєе╣е╚б╝еы╝ъ╜ч
+README      - уБУуБоуГХуВбуВдуГлуБошЛ▒шкЮчЙИ
+README.jp   - уБУуБоуГХуВбуВдуГл
+COPYRIGHT   - шСЧф╜Ьцийшбичд║уБКуВИуБ│уГйуВдуВ╗уГ│уВ╣уБлуБдуБДуБж
+COPYING.LIB - LGPL (GNUхКгчнЙф╕АшИмхЕмшбЖхИйчФиши▒шл╛хеСч┤ДцЫ╕)
+INSTALL     - уВдуГ│уВ╣уГИуГ╝уГлцЙЛщаЖ(шЛ▒шкЮчЙИ)
+INSTALL.jp  - уВдуГ│уВ╣уГИуГ╝уГлцЙЛщаЖ
