--- a/packages/deb/debian/changelog
+++ b/packages/deb/debian/changelog
@@ -1,3 +1,9 @@
+openrtm-aist (1.2.1-0) experimental; urgency=low
+
+  * 1.2.1-0 (1.2.1-RELEASE). OpenRTM-aist-1.2.1-RELEASE
+
+ -- Noriaki Ando <n-ando@aist.go.jp>  Fri, 24 May 2019 10:24:08 +0900
+
 openrtm-aist (1.2.0-0) precise; urgency=low
 
   * 1.2.0-0 (1.2.0-RELEASE). OpenRTM-aist-1.2.0-RELEASE  
